--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11",
     "axios": "^0.25.0",
     "framer-motion": "^5",
+    "jwt-decode": "^3.1.2",
     "next": "12.0.8",
     "nookies": "^2.5.2",
     "react": "17.0.2",
